--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>Ejercicios HTML5</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,6 +17,7 @@
         <h1>Emojis</h1>
         <div class="mamaCaja">
             <div class="caja1">
+                <p>The Code</p>
                 <div id="emoji1">🐥</div>
             </div>
             <div class="caja2">
@@ -29,6 +33,7 @@
                 <div id="emoji5">🦭</div>
             </div>
             <div class="caja6">
+                <p>Let´s Dance</p>
                 <div id="emoji6">🐙</div>
             </div>
             <div class="caja7">
@@ -44,6 +49,7 @@
                 <div id="emoji10">🐡</div>
             </div>
             <div class="caja11">
+                <p>Let´s Shine</p>
                 <div id="emoji11">🐢</div>
             </div>
             <div class="caja12">
@@ -53,6 +59,7 @@
                 <div id="emoji13">🦎</div>
             </div>
             <div class="caja14">
+                <p>The Queen</p>
                 <div id="emoji14">🐝</div>
             </div>
         </div>
