--- a/index.html
+++ b/index.html
@@ -18,49 +18,49 @@
         <div class="mamaCaja">
             <div class="caja1">
                 <p>The Code</p>
-                <div id="emoji1">🐥</div>
+                <div class="emoji" id="emoji1">🐥</div>
             </div>
             <div class="caja2">
-                <div id="emoji2">🌊</div>
+                <div class="emoji" id="emoji2">🌊</div>
             </div>
             <div class="caja3">
-                <div id="emoji3">🪼</div>
+                <div class="emoji" id="emoji3">🪼</div>
             </div>
             <div class="caja4">
-                <div id="emoji4">🐬</div>
+                <div class="emoji" id="emoji4">🐬</div>
             </div>
             <div class="caja5">
-                <div id="emoji5">🦭</div>
+                <div class="emoji" id="emoji5">🦭</div>
             </div>
             <div class="caja6">
                 <p>Let´s Dance</p>
-                <div id="emoji6">🐙</div>
+                <div class="emoji" id="emoji6">🐙</div>
             </div>
             <div class="caja7">
-                <div id="emoji7">🐚</div>
+                <div class="emoji" id="emoji7">🐚</div>
             </div>
             <div class="caja8">
-                <div id="emoji8">🐠</div>
+                <div class="emoji" id="emoji8">🐠</div>
             </div>
             <div class="caja9">
-                <div id="emoji9">🪸</div>
+                <div class="emoji" id="emoji9">🪸</div>
             </div>
             <div class="caja10">
-                <div id="emoji10">🐡</div>
+                <div class="emoji" id="emoji10">🐡</div>
             </div>
             <div class="caja11">
                 <p>Let´s Shine</p>
-                <div id="emoji11">🐢</div>
+                <div class="emoji" id="emoji11">🐢</div>
             </div>
             <div class="caja12">
-                <div id="emoji12">🦕</div>
+                <div class="emoji" id="emoji12">🦕</div>
             </div>
             <div class="caja13">
-                <div id="emoji13">🦎</div>
+                <div class="emoji" id="emoji13">🦎</div>
             </div>
             <div class="caja14">
                 <p>The Queen</p>
-                <div id="emoji14">🐝</div>
+                <div class="emoji" id="emoji14">🐝</div>
             </div>
         </div>
     </body>
